get rid of JNA warning